feat: consolidate event processing and optimize application performance
The event processing system has been updated to improve readability and efficiency:

- Switched from Reactor to Kotlin Flow for event handling to improve readability.
- Events are now saved in batch, reducing concurrency and improving performance.
- Removed reconciliation logic with a more aggressive in memory cache approach.
- Replaced Caffeine with a simple LinkedHashMap cache to support LRU eviction policy.
- Added configuration parameters to adjust the size of the cache, buffer and batch chunk size. These
  properties can also be modified with environment variables.
- Removed actuator: benchmarks are now log, reducing memory consumption and eliminating the need
  for starting a server.
- Updated dependencies to the latest compatible versions.
- Replaced dynamic mapping in OpenSearch with a handmade mapping for document fields. This change
  reduces storage requirements, and eliminates unnecessary fields, making queries more logical and
  efficient.

Co-authored-by: Gaëtan Muller <m.gaetan89@gmail.com>